# FlexQR

./: .dockerignore  README.md
backend/: .env.example  .gitignore  README.md  pyproject.toml
backend/app/: __init__.py  main.py
backend/app/api/: __init__.py  deps.py
backend/app/api/v1/: router.py
backend/app/api/v1/endpoints/: auth.py  health.py  qrcodes.py  users.py
backend/app/core/: __init__.py  config.py  constants.py  exceptions.py  security.py
backend/app/db/: __init__.py  indexes.py  mongodb.py
backend/app/middleware/: __init__.py  auth.py
backend/app/models/: __init__.py  auth.py  base.py  enums.py  qrcode.py  user.py
backend/app/repositories/: __init__.py  base.py  qrcode_access_repository.py  qrcode_repository.py  user_repository.py
backend/app/schemas/: __init__.py  auth.py  base.py  common.py  qrcode.py  user.py
backend/app/services/: __init__.py  auth_service.py  google_oauth_service.py  qrcode_service.py  user_service.py
backend/app/utils/: datetime.py  network.py  shortcodes.py
backend/flexqr_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/tests/: __init__.py
deploy/: .env.example  README.md  backend.Dockerfile  docker-compose.yml  down.ps1  down.sh  frontend-nginx.conf  frontend.Dockerfile  up.ps1  up.sh
frontend/: .env.example  README.md  index.html  metadata.json  package-lock.json  package.json
frontend/src/: App.tsx  vite-env.d.ts
frontend/src/components/: UnderConstruction.tsx
frontend/src/context/: AuthContext.tsx  QRCodeContext.tsx
frontend/src/i18n/: config.ts  language.ts
(+25 files in other folders)
